# SIEM-Plus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FEATURES.md  FINAL_SUMMARY.md  LICENSE  Makefile  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SECURITY.md  TESTING_GUIDE.md  TEST_RESULTS.md  WAZUH_INSPIRED_ENHANCEMENTS.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: Cargo.toml  README.md  config.example.yaml
agent/src/: config.rs  main.rs
agent/src/crypto/: mod.rs  signing.rs
agent/src/fim/: hasher.rs  mod.rs  watcher.rs
agent/src/network/: connections.rs  mod.rs
agent/src/op/: executor.rs  mod.rs
agent/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
agent/src/procmon/: mod.rs  tracker.rs
agent/src/telemetry/: cpu.rs  disk.rs  memory.rs  mod.rs
agent/src/uploader/: batch.rs  mod.rs
config/: integrations.yaml  values-prod.yaml
detect/: Cargo.toml  Dockerfile  README.md
detect/src/: alerts.rs  engine.rs  main.rs  metrics.rs  state.rs
detect/src/sigma/: compiler.rs  evaluator.rs  mod.rs  parser.rs
docs/: api-reference.md  architecture.md  deployment.md  getting-started.md
infra/: docker-compose.dev.yml
infra/grafana/dashboards/: siem-overview.json
infra/helm-charts/siem-plus/: Chart.yaml  values.yaml
infra/helm-charts/siem-plus/templates/: _helpers.tpl  deployment-detect.yaml  deployment-manager.yaml  hpa-detect.yaml  hpa-manager.yaml  ingress.yaml  service-manager.yaml  service-ui.yaml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
ingest/: go.mod
ingest/cmd/worker/: main.go
manager/: Dockerfile  go.mod
manager/cmd/server/: main.go
manager/internal/api/: agents.go  alerts.go  auth.go  cases.go  dashboard.go  events.go  rules.go
manager/internal/config/: config.go
manager/internal/database/: postgres.go  redis.go
manager/internal/middleware/: auth.go  logger.go
marketplace/rules/linux/: suspicious_shell.yml
marketplace/rules/network/: port_scan.yml
marketplace/rules/windows/: powershell_suspicious.yml
scripts/: complete-deployment.ps1  complete-deployment.sh  configure-integrations.sh  deploy-kubernetes.ps1  deploy-kubernetes.sh  fix-and-test.ps1  import-sigma-rules.sh  run-tests.sh  scale-deployment.sh  setup-monitoring.sh  setup.ps1  setup.sh  test-components.ps1  test-local.ps1  test-local.sh
soar/: requirements.txt  setup.py
soar/playbooks/: auto_assign_critical.yaml
soar/soar/: __init__.py  engine.py
soar/soar/connectors/: __init__.py  jira.py  slack.py
ui/: Dockerfile  index.html  nginx.conf  package.json
ui/src/: App.tsx  index.css
ui/src/components/: Layout.tsx
ui/src/pages/: Agents.tsx  Alerts.tsx  Cases.tsx  Dashboard.tsx  Login.tsx  Rules.tsx
ui/src/stores/: authStore.ts
