[package]
name = "siem-plus-agent"
version = "0.1.0"
edition = "2021"
authors = ["SIEM-Plus Contributors"]
license = "Apache-2.0"
description = "Lightweight endpoint security agent for SIEM-Plus"
repository = "https://github.com/your-org/siem-plus"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
sha2 = "0.10"
blake3 = "1.5"
notify = "6.1"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rustls = "0.21"
rustls-pemfile = "1.0"
ring = "0.17"
base64 = "0.21"
async-trait = "0.1"
futures = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_NetworkManagement_IpHelper",
] }
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal", "fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal", "fs"] }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "siem-agent"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false
