[package]
name = "siem-plus-detect"
version = "0.1.0"
edition = "2021"
authors = ["SIEM-Plus Contributors"]
license = "Apache-2.0"
description = "Stream-based detection engine with Sigma rule support"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
prometheus = "0.13"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "detect-engine"
path = "src/main.rs"
